Prevent removal of 'Enjoy stay' paragraph on small screens by disabling associated css

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -46,9 +46,9 @@
 				margin-top: 1em;
 			}
 
-		#header .container {
-			display: none;
-		}
+		/*#header .container {*/
+		/*	display: none;*/
+		/*}*/
 
 /* Footer */
 
